# template-celery-worker

./: .dockerignore  .gitignore  compose.yml  pyproject.toml
deployments/: .env  Dockerfile  compose.yml
src/celery_worker/: main.py
src/celery_worker/settings/: celery.py  redis.py
