[project]
name = "celery-worker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "theLemonday", email = "nhathao090703@gmail.com" }
]
dependencies = [
    "async-timeout>=5.0.1",
    "celery>=5.6.2",
    "pydantic-settings>=2.12.0",
    "redis>=7.1.0",
]

[project.scripts]
celery-worker = "celery_worker:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
